<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:background="#8ECAE6" android:orientation="vertical" tools:context=".MainActivity">
    <TextView android:id="@+id/textView" android:layout_width="match_parent" android:layout_height="wrap_content" android:background="#023047" android:backgroundTint="#023047" android:fontFamily="sans-serif-medium" android:paddingStart="30dp" android:paddingTop="10dp" android:paddingEnd="30dp" android:paddingBottom="10dp" android:shadowColor="#A84545" android:text="@string/calculate_your_imc" android:textAlignment="center" android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textColor="#FFFFFF"/>
    <TextView android:id="@+id/textView2" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="20dp" android:paddingTop="20dp" android:text="@string/enter_your_weight_kilograms" android:textColor="#023047" android:textSize="18sp" android:textStyle="bold" tools:ignore="RtlSymmetry"/>
    <EditText android:id="@+id/editWeight" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:allowUndo="false" android:backgroundTint="#219EBC" android:backgroundTintMode="add" android:ems="10" android:hapticFeedbackEnabled="false" android:importantForAutofill="no" android:inputType="number|numberDecimal|numberSigned" android:textColorHighlight="#FFFFFF" android:textColorHint="#023047" android:textColorLink="#FFFFFF" android:textSize="34sp" android:visibility="visible" tools:ignore="LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck" tools:visibility="visible"/>
    <TextView android:id="@+id/textView3" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="20dp" android:paddingTop="20dp" android:text="@string/fill_in_your_height_in_meters" android:textColor="#023047" android:textSize="18sp" android:textStyle="bold" tools:ignore="RtlSymmetry"/>
    <EditText android:id="@+id/editHeight" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:allowUndo="false" android:backgroundTint="#219EBC" android:backgroundTintMode="add" android:ems="10" android:hapticFeedbackEnabled="false" android:importantForAutofill="no" android:inputType="number|numberDecimal" android:textColorHighlight="#FFFFFF" android:textColorHint="#023047" android:textColorLink="#FFFFFF" android:textSize="34sp" android:visibility="visible" tools:ignore="LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck" tools:visibility="visible"/>
    <Button android:id="@+id/btnCalculate" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="20dp" android:layout_marginRight="20dp" android:backgroundTint="#FFB703" android:paddingTop="16dp" android:paddingBottom="16dp" android:text="@string/to_calculate" android:textSize="18sp" app:cornerRadius="10dp" tools:ignore="TextContrastCheck,VisualLintButtonSize"/>
    <TextView android:id="@+id/textViewResult" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:background="#8ECAE6" android:backgroundTint="#219EBC" android:cursorVisible="true" android:inputType="number|numberDecimal|numberSigned" android:paddingTop="20dp" android:paddingBottom="20dp" android:text="@string/your_imc_is" android:textAlignment="center" android:textColor="#FFFFFF" android:textSize="18sp" android:textStyle="bold" android:visibility="invisible" tools:ignore="TextContrastCheck,TextViewEdits"/>
    <ImageView android:id="@+id/imageView" android:layout_width="match_parent" android:layout_height="315dp" android:layout_marginTop="20dp" android:contentDescription="@string/imc_table_description" android:visibility="visible" app:srcCompat="@drawable/imc_table" tools:ignore="ImageContrastCheck,VisualLintBounds"/>
</LinearLayout>